manifests/media-management/bazarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  namespace: media-management
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: envoy-gateway
      #sectionName: https
  hostnames:
    - bazarr.newgamer.lan
  rules:
    - backendRefs:
        - name: bazarr
          port: 6767
